<resources>
    <string name="app_name">TOEC_LINKER</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_setting">设置</string>
    <string name="nav_share">分享</string>
    <string name="nav_about">关于</string>
    <string name="nav_leave">退出</string>
    <string name="nav_change_info">修改信息</string>
    <string name="nav_device_check">设备检视</string>
    <string name="nav_system">系统</string>
    <string name="nav_user">用户</string>
</resources>
